--- a/client/templates/home/home.jade
+++ b/client/templates/home/home.jade
@@ -1,1 +1,16 @@
 template(name='Home')
+
+  header
+    h1.title Library Dashboard
+    span.lib-icon
+
+  section.log-in-form
+
+    label Username:
+    br
+    input#username-input(type='text')
+    label Password:
+    br
+    input#password-input(type='password')
+    br
+    button.btn.btn-primary#sign-in Sign In
