--- a/client/templates/dashboard/dashboard.jade
+++ b/client/templates/dashboard/dashboard.jade
@@ -1,1 +1,26 @@
 template(name='Dashboard')
+
+.row
+  .col-xs-6
+    .search
+      input(type='text')
+      button.btn.btn-primary#search
+        i.fa.fa-searcg
+  .col-xs-6
+  .user-btns
+    a#your-account Your Account
+    button.btn.btn-primary#view-bookshelf View Bookshelf
+
+.row
+  .col-xs-6
+    .bookimage
+      span #{bib-image}
+  .col-xs-6
+    .bookgallery
+      +pages
+      +pagesNav
+
+.add-books
+  label Add Books (by OCLC Numbers):
+  textarea#sysnums-submission(cols='3')
+  button.btn.btn-primary#submit-sysnums Submit
