--- a/client/templates/home/home.jade
+++ b/client/templates/home/home.jade
@@ -1,25 +1,30 @@
 template(name='Home')
 
-  header
-    h1.ui.teal.header Library Dashboard
+  main
+    section.ui.raised.very.padded.text.container.segment#log-in-content
+      header
+        h1.ui.teal.center.aligned.header#main-title Library Dashboard
+        hr
 
-  .ui.middle.aligned
-    .column
-      h2.ui.teal.header
-        .content Please, sign in:
-    form.ui.large.form
-      .ui.stacked.segment
-        .field
-          .ui.left.icon.input
-            i.user.icon
-            input(type='text' name='email' placeholder='E-mail address')
-        .field
-          .ui.left.icon.input
-            i.lock.icon
-            input(type='password' name='password' placeholder='Password')
-        .ui.fluid.large.teal.submit.button Sign In
+      .ui.middle.aligned.center.aligned.grid
+        .column
+          h2.ui.teal.header
+            .content Please, sign in:
+          form.ui.large.form
+            .ui.stacked.segment
+              .field
+                .ui.left.icon.input
+                  i.user.icon
+                  input(type='text' name='email' placeholder='E-mail address')
+              .field
+                .ui.left.icon.input
+                  i.lock.icon
+                  input(type='password' name='password' placeholder='Password')
+              .ui.fluid.large.teal.submit.button#sign-in Sign In
 
-        .ui.error.message
+              .ui.error.message
 
-    .ui.message Have an Access Code?
-      a(href="#") Register
+              .ui.message Have an Access Code?
+                a#register Register Here.
+
+    +RegisterModal
