--- a/client/templates/commons/modals/users/users.jade
+++ b/client/templates/commons/modals/users/users.jade
@@ -1,8 +1,8 @@
 template(name='ViewBookshelf')
-  .ui.small.modal#view-bookshelf-modal
+  .ui.small.modal#users-modal
     i.close.icon#close
     .ui.middle.aligned.center.aligned.grid
       .column
-        h2#register-subtitle Your Bookshelf:
+        h2#register-subtitle Users:
         hr
         .content
