--- a/client/stylesheets/styles.less
+++ b/client/stylesheets/styles.less
@@ -1,12 +1,21 @@
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif);
 
 body {
-  background-image: linear-gradient(#e0ebeb, #ffffff);
+  background-image: linear-gradient(#99c7e6, #ffffff);
 }
 
-#close {
-  margin-top: -150px;
-  margin-left: 70px;
+#add-new-books{
+  margin-left: 100px;
+  width: 400px;
+}
+
+#book-gallery {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+#dashboard-nav{
+  padding: 15px;
 }
 
 #log-in-content {
@@ -15,11 +24,23 @@ body {
   transform: translateY(40%);
 }
 
+#log-out {
+  text-align: right;
+}
+
 #main-title {
   font-family: 'Droid Serif', serif;
   font-size: 50px;
   font-weight: 200;
   opacity: 0.7;
+}
+
+#search {
+  margin: 30px;
+}
+
+.user-links a{
+  margin: 5px;
 }
 
 .column {
@@ -30,13 +51,13 @@ a {
   cursor: default;
 }
 
-#register-modal {
+.ui.small.modal {
   padding: 100px;
   position: relative;
   top: 50%;
 }
 
-#register-subtitle {
+.ui.small.modal h2 {
   font-size: 30px;
   text-align: left;
 }
