--- a/client/templates/dashboard/dashboard.jade
+++ b/client/templates/dashboard/dashboard.jade
@@ -32,6 +32,10 @@ template(name='Dashboard')
                 .ui.basic.blue.button.right.floated#view-bookshelf View Bookshelf
                 .ui.basic.blue.button.right.floated#download-bookshelf Download Bookshelf
 
+                ui.success.message.hidden#success
+                  i.close.icon
+                  p#success-message
+
       section.ui.segment#add-new-books
         p Submit List from FLVC Here:
         hr
