Fixing 'adding books'.
Method 'add books' to be fixed.

--- a/client/templates/commons/modals/users/users.jade
+++ b/client/templates/commons/modals/users/users.jade
@@ -1,4 +1,4 @@
-template(name='ViewBookshelf')
+template(name='Users')
   .ui.small.modal#users-modal
     i.close.icon#close
     .ui.middle.aligned.center.aligned.grid
