--- a/client/templates/dashboard/dashboard.jade
+++ b/client/templates/dashboard/dashboard.jade
@@ -23,18 +23,14 @@ template(name='Dashboard')
             .ui.item
               .image
               .content
-                +pages
-                +pagesNav
+                #{book}
+                .page
                 .ui.basic.teal.button.right.floated#add-to-bookshelf + Add to Bookshelf
                 br
                 br
                 hr
                 .ui.basic.blue.button.right.floated#view-bookshelf View Bookshelf
                 .ui.basic.blue.button.right.floated#download-bookshelf Download Bookshelf
-
-                ui.success.message.hidden#success
-                  i.close.icon
-                  p#success-message
 
       section.ui.segment#add-new-books
         p Submit List from FLVC Here:
