--- a/client/templates/main.jade
+++ b/client/templates/main.jade
@@ -6,6 +6,5 @@ template(name='Main')
       meta(name="viewport" content="device-width, initial-scale=1")
       title Library Dashboard
 
-    body
+    main
       +yield
-      script(src='public/scripts/jquery.simplePagination.js" type="text/javascript')
