--- a/client/templates/dashboard/dashboard.jade
+++ b/client/templates/dashboard/dashboard.jade
@@ -62,7 +62,7 @@ template(name='Dashboard')
         .ui.button#clear-sysnums Clear
 
 
-
+      +Users
       +ViewBookshelf
       +Account
       +Notifications
