--- a/client/stylesheets/styles.less
+++ b/client/stylesheets/styles.less
@@ -14,6 +14,15 @@ body {
   margin-right: 100px;
 }
 
+#book-info {
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+#book-info li{
+  list-style-type: none;
+}
+
 #dashboard-nav{
   padding: 15px;
 }
@@ -58,7 +67,7 @@ a {
 .ui.small.modal {
   padding: 100px;
   position: relative;
-  top: 50%;
+  top: 40%;
 }
 
 .ui.small.modal h2 {
