--- a/client/templates/commons/modals/account/account.jade
+++ b/client/templates/commons/modals/account/account.jade
@@ -14,3 +14,10 @@ template(name='Account')
           br
           br
           .ui.basic.red.button#delete-account Delete Your Account
+
+          .change-user
+            p#form-text
+            input#change-account-input(type="text")
+            br
+            br
+            .ui.basic.blue.button#change-account Confirm Change
