--- a/client/templates/dashboard/dashboard.jade
+++ b/client/templates/dashboard/dashboard.jade
@@ -29,6 +29,7 @@ template(name='Dashboard')
           .ui.items
             .ui.item
               .image
+                img(src='#{image}')
               .content
                 .bib-info
                   p OCLC #: #{oclc}
