images now functional
:)!!!!!!

--- a/client/templates/dashboard/dashboard.jade
+++ b/client/templates/dashboard/dashboard.jade
@@ -28,7 +28,7 @@ template(name='Dashboard')
           .ui.items
             .ui.item
               .image
-                img(src='#{image}')
+                img#bib-image(src='#{image}')
               .content
                 .bib-info
                   p OCLC #: #{oclc}
