--- a/client/stylesheets/styles.less
+++ b/client/stylesheets/styles.less
@@ -24,6 +24,7 @@ body, html {
 #book-info {
   overflow-y: scroll;
   padding: 10px;
+  height: 275px;
 }
 
 #book-info li{
@@ -75,6 +76,7 @@ a {
   padding: 100px;
   position: relative;
   top: 40%;
+  height: 500px;
 }
 
 .ui.small.modal h2 {
