Updated help modal.

--- a/client/stylesheets/styles.less
+++ b/client/stylesheets/styles.less
@@ -39,6 +39,13 @@ body, html {
   padding: 15px;
 }
 
+#help-request {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  overflow-y: scroll;
+}
+
 #log-in-content {
   position: relative;
   top: 50%;
