--- a/client/templates/dashboard/dashboard.jade
+++ b/client/templates/dashboard/dashboard.jade
@@ -3,7 +3,7 @@ template(name='Dashboard')
       .ui.menu#dashboard-nav
         .left.header.white.item Palm Beach State College | Lake Worth Library
         .right
-          .ui.basic.blue.button#users Users
+          .ui.basic.blue.button#admin Admin
           .ui.basic.blue.button#log-out Log Out
 
       .ui.secondary.pointing.menu
@@ -61,8 +61,4 @@ template(name='Dashboard')
         .ui.basic.blue.button#submit-sysnums Submit
         .ui.button#clear-sysnums Clear
 
-
-      +Users
-      +ViewBookshelf
-      +Account
-      +Help
+      +MainModal
