--- a/client/templates/home/home.jade
+++ b/client/templates/home/home.jade
@@ -27,4 +27,4 @@ template(name='Home')
               .ui.message Have an Access Code?
                 a#register Register Here.
 
-    +RegisterModal
+    +MainModal
