--- a/client/stylesheets/styles.less
+++ b/client/stylesheets/styles.less
@@ -22,13 +22,16 @@ body, html {
 
 
 #book-info {
-  overflow-y: scroll;
   padding: 10px;
-  height: 275px;
 }
 
 #book-info li{
   list-style-type: none;
+}
+
+.bookshelf-content{
+  height: 300px;
+  overflow-y: scroll;
 }
 
 .change-user {
