--- a/client/templates/dashboard/dashboard.jade
+++ b/client/templates/dashboard/dashboard.jade
@@ -45,6 +45,8 @@ template(name='Dashboard')
                   i.fa.fa-chevron-left
                 br
                 br
+                hr
+                .ui.basic.red.button.right.floated#delete-book Delete Book From Collection
                 .ui.basic.teal.button.right.floated#add-to-bookshelf + Add to Bookshelf
                 br
                 br
