Added google feature.

--- a/client/stylesheets/styles.less
+++ b/client/stylesheets/styles.less
@@ -42,6 +42,19 @@ body, html {
   padding: 15px;
 }
 
+#google-img {
+  display: block;
+  height: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  width: 40px;
+}
+
+#google-img:hover {
+  box-shadow: 0 0 8px rgba(0,0,100, 0.2);
+}
+
 #help-request {
   display: block;
   margin-left: auto;
