--- a/client/stylesheets/styles.less
+++ b/client/stylesheets/styles.less
@@ -7,13 +7,14 @@ body, html {
 }
 
 #add-new-books{
-  margin-left: 100px;
+  float: right;
+  margin-right: 20px;
   width: 400px;
 }
 
 #book-gallery {
-  margin-left: 100px;
-  margin-right: 100px;
+  margin-left: 300px;
+  margin-right: 50px;
 }
 
 #book-gallery-message {
@@ -81,6 +82,10 @@ body, html {
 
 #search {
   margin: 30px;
+}
+
+#section-nav {
+  margin-left: 30px;
 }
 
 .user-links a{
