search feature finalized

--- a/client/stylesheets/styles.less
+++ b/client/stylesheets/styles.less
@@ -8,7 +8,7 @@ body, html {
 
 #add-new-books{
   float: right;
-  margin-right: 20px;
+  margin-right: 45px;
   width: 400px;
 }
 
@@ -84,8 +84,13 @@ body, html {
   margin: 30px;
 }
 
+#search-button {
+  cursor: default;
+}
+
 #section-nav {
   margin-left: 30px;
+  transform: translateY(120%);
 }
 
 .user-links a{
