--- a/client/stylesheets/styles.less
+++ b/client/stylesheets/styles.less
@@ -98,6 +98,17 @@ body, html {
   opacity: 0.7;
 }
 
+#notifications {
+  color: white;
+  cursor: default;
+  font-size: 20px;
+  margin-left: 15px;
+}
+
+#notifications:hover {
+  color: #0066cc;
+}
+
 #search {
   margin: 30px;
 }
