--- a/client/stylesheets/styles.less
+++ b/client/stylesheets/styles.less
@@ -12,6 +12,7 @@ body, html {
 }
 
 #add-new-books{
+  display : none;
   float: right;
   margin-right: 45px;
   width: 400px;
@@ -20,7 +21,7 @@ body, html {
 #book-gallery {
   margin-left: 300px;
   margin-right: 50px;
-  margin-top: -150px;
+  margin-top: -255px;
 }
 
 #book-gallery-message {
@@ -37,7 +38,8 @@ body, html {
 }
 
 .bookshelf-content{
-  height: 300px;
+  height: 400px;
+  width: 600px;
   overflow-y: scroll;
 }
 
@@ -91,6 +93,10 @@ body, html {
   text-align: right;
 }
 
+#main-modal {
+  height: 600px;
+}
+
 #main-title {
   font-family: 'Droid Serif', serif;
   font-size: 50px;
@@ -119,7 +125,11 @@ body, html {
 
 #section-nav {
   margin-left: 30px;
-  transform: translateY(20%);
+  transform: translateY(5%);
+
+    a {
+      font-size: 20px;
+    }
 }
 
 #twitter {
