--- a/client/stylesheets/styles.less
+++ b/client/stylesheets/styles.less
@@ -21,11 +21,12 @@ body, html {
 #book-gallery {
   margin-left: 300px;
   margin-right: 50px;
-  margin-top: -255px;
+  margin-top: -265px;
 }
 
 #book-gallery-message {
   display: none;
+  float: left;
 }
 
 
@@ -47,6 +48,10 @@ body, html {
   display: none;
 }
 
+#contact-us {
+  padding: 50px;
+}
+
 #dashboard-nav{
   padding: 15px;
 }
@@ -61,6 +66,10 @@ body, html {
 
 #facebook:hover {
   color: #0066cc;
+}
+
+footer {
+  margin-top: 200px;
 }
 
 #google-img {
@@ -125,12 +134,12 @@ body, html {
 }
 
 #section-nav {
-  margin-left: 30px;
-  transform: translateY(5%);
+  margin-left: 15px;
+  margin-top: 150px;
+}
 
-    a {
-      font-size: 20px;
-    }
+#section-nav a {
+  font-size: 20px;
 }
 
 #twitter {
